resources/external-services/google/google-egress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egress-google
  namespace: external
spec:
  selector:
    gateway-name: egress-google
    gateway-type: egress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - google.com
    - port:
        number: 443
        name: tls
        protocol: TLS
      hosts:
        - google.com
      tls:
        mode: PASSTHROUGH
