resources/external-services/google/google-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: google
  namespace: external
spec:
  type: ExternalName
  externalName: egress-external.external.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google-local
  namespace: default
spec:
  hosts:
    - google.external.svc.cluster.local
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
