resources/external-services/google/google-redirect.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: google-egress
  namespace: external
spec:
  hosts:
    - google.com
  gateways:
    - external/egress-external
  http:
    - match:
        - gateways:
            - external/egress-external
          port: 80
      route:
        - destination:
            host: google.com
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: google-egress
  namespace: default
spec:
  hosts:
    - google.com
  http:
    - match:
        - port: 80
          sourceLabels:
            k8s-app: echo-b
      route:
        - destination:
            host: google.external.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google-external
  namespace: external
spec:
  hosts:
    - google.com
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
